[tool.poetry]
name = "mytoolsapi"
version = "0.1.0"
description = ""
authors = ["Ben Vincent <ben@unkin.net>"]

[tool.poetry.dependencies]
python = "^3.9"
requests-html = "^0.10.0"
beautifulsoup4 = "^4.11.1"
fastapi = "^0.77.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
gunicorn = "^20.1.0"
pydantic = "^1.9.0"
pymemcache = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
